# ForStudents

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  main  main.cpp  matr_task  matr_task.cpp  some_functions.cpp  some_functions.h
